can now send messages from app and from notifications
also cleaned up null pointer problems in Messenger.java